responsiveness and card alignment fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ html {
 body {
   background-color: #eee;
   background-image: url("https://www.transparenttextures.com/patterns/brilliant.png");
-  padding: 0 16px 0 0;
+  padding: 0 16px 0 16px;
 }
 
 header {
@@ -51,15 +51,34 @@ header .topnav-outer {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   text-align: center;
   bottom: 0;
+
   width: 100%;
   height: 2.5rem;
 }
 
 footer p {
   color: #ccc;
+  /* color: red; */
+}
+
+.notes {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+@media screen and (min-width: 600px) {
+  .notes {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .notes {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .note {
@@ -67,7 +86,7 @@ footer p {
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
-  width: 240px;
+  min-width: 300px;
   margin: 16px;
   float: left;
 }
@@ -98,8 +117,8 @@ footer p {
 
 form.create-note {
   position: relative;
-  width: 480px;
-  margin: 180px auto 20px auto;
+  max-width: 600px;
+  margin: 100px auto 20px auto;
   background: #fff;
   padding: 15px;
   border-radius: 7px;
@@ -179,17 +198,15 @@ form.login {
 }
 
 .welcome {
-  position: absolute;
-  right: 30%;
-  bottom: 75%;
+  text-align: center;
   word-wrap: break-word;
-  margin-top: 5px;
+  margin-top: 50px;
 }
 
 .saveFab {
+  position: fixed;
   top: auto;
-  right: 30px;
-  bottom: 20px;
-  left: 20 px;
-  position: absolute;
+  right: 20px;
+  bottom: 17px;
+  /* left: 20px; */
 }
